# neiry_hackathon

./: .gitignore  CMakeLists.txt  README.md
Include/: CClientAPI.h  Platforms.hpp  ccPlatforms.h  client.hpp
Include/Capsule/: CCardio.h  CClient.h  CDefinesPrivate.h  CDevice.h  CDeviceInfo.h  CDeviceInfoList.h  CDeviceLocator.h  CEEGTimedData.h  CEmotions.h  CError.h  CLicenseManager.h  CMEMS.h  CMEMSTimedData.h  CNFB.h  CNFBBaseline.h  CNFBCalibrator.h  CNFBMetricsProductivity.h  CPPGTimedData.h  CPhysiologicalStates.h  CPoint3d.h  CResistances.h  CSession.h  CString.h
Lib/: CapsuleClient.lib
Source/: ExampleUtils.hpp  FilteredSignalExample.cpp  RawSignalExample.cpp  client.cpp  main.cpp
notification_app/: logic.py  main.py  ui.py
server/: main.py
server/CppPythonSocket/: server.py
